--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,1 +1,14 @@
-//styles go here
+$mainBlue: #2f5572;
+
+body {
+	color: $mainBlue;
+	padding: 11px;
+	columns: 300px 2;
+}
+
+.box {
+	a {
+		display: block;
+		padding: 10px;
+	}
+}
