--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -9,6 +9,14 @@
 	&--gutters > div {
 		padding-right: 65px;
 	}
+
+	&--gutters-large{
+		margin-right: -100px;
+	}
+
+	&--gutters-large > div {
+		padding-right: 100px;
+	}
 	
 	&__b-margin-until-medium {
 		margin-bottom: 1rem;
@@ -23,6 +31,11 @@
 		&__medium-4 {
 			float: left;
 			width: 33.33%;
+		}
+
+		&__medium-6 {
+			float: left;
+			width: 50%;
 		}
 
 		&__medium-4--larger {
