--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,6 +2,10 @@
 
 	@mixin clearfix;
 
+	&--t-padding {
+		padding-top: 80px;
+	}
+
 	&--gutters {
 		margin-right: -65px;
 	}
@@ -10,12 +14,20 @@
 		padding-right: 65px;
 	}
 
-	&--gutters-large{
+	&--gutters-large {
 		margin-right: -100px;
+	}
+
+	&--gutters-small {
+		margin-right: -45px;
 	}
 
 	&--gutters-large > div {
 		padding-right: 100px;
+	}
+
+	&--gutters-small > div {
+		padding-right: 45px;
 	}
 	
 	&__b-margin-until-medium {
@@ -51,5 +63,15 @@
 		}
 	}
 	
+	/*Begin equal height rules */
+	&--equal-height-at-medium {
+		@mixin atMedium {
+			display: flex;
+		}
 
+		& > div {
+			float: none;
+			display: flex;
+		}
+	}
 }
