--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -19,6 +19,15 @@
 			padding-right: 18px;
 		}
 	}
+	&--no-padding-until-large {
+		padding-left: 0;
+		padding-right: 0;
+
+		@mixin atLarge {
+			padding-left: 18px;
+			padding-right: 18px;
+		}
+	}	
 
 	.wrapper {
 		padding-right: 0;
