--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -10,6 +10,10 @@
 		max-width: 976px;
 	}
 	
+	&--medium {
+		max-width: 470px;
+	}
+
 	&--no-padding-until-medium {
 		padding-left: 0;
 		padding-right: 0;
